# WorkShop-2025-2026

./: README.md
Documents/: Easter egg n°23.docx  Hedwige n°15.docx  Installation_Phi3Mini_LLM_Local.docx  LE COURS DE FLITWUS LICKUIK N°11.docx  Oculus reparo n°10.docx  Protego maxima n°4.docx  Starter pack n°12.docx  Workshop2025-Dockerwarts-Proofs N°1 et N°2.docx
Le procès de J.K. Rowling n°22/: HarryPotter_Rapport n°22.docx  HarryPotter_stats.csv  defi 22.py
hedwige n°15/: .gitignore  docker-compose.yml
hedwige n°15/backend/: .env.example  Dockerfile  index.js  package-lock.json  package.json
hedwige n°15/backend/tests/: app.test.js
hedwige n°15/frontend/: Dockerfile  package-lock.json
hedwige n°15/frontend/public/: index.html
hedwige n°15/frontend/src/: App.css  App.js
hedwige n°15/frontend/src/components/: Profile.js
la_boite_magique_de_severus_rogue n°14/: .gitignore  CMakeLists.txt  README.md
la_boite_magique_de_severus_rogue n°14/src/: FileCollector.cpp  FileCollector.h  main.cpp
le_patronus_de_l_epsi n°9/: animation_2D.html
proces_hp_package N°22/: README.txt  analyse_hp.py  pages.json  rapport_synthese_demo n°22.docx  requirements.txt  summary.csv
tu_es_un_sorcier_harry N°16/: Rapport_QCM.docx
tu_es_un_sorcier_harry N°16/mobile/: App.js  Readme.md  package.json  questions.json
wigor_fetcher n°13/: Rapport - On n’avait pas cours avec McGonagall N°13.docx  cookie.txt  requirements.txt  test_wigor_client.py  wigor_client.py
